--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" rel="stylesheet" href="./style.css">
+    <link type="text/css" rel="stylesheet" href="./sign_up/style.css">
     <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <title>Scribo Form</title>
 </head>
@@ -27,9 +27,9 @@
             </form>
             <div class="sign">
             <button><i class="fa-brands fa-google"></i>Sign up with Google</button>
-            <button><i class="fa-brands fa-instagram"></i>Sign with Instagram</button>
+            <button><i class="fa-brands fa-instagram"></i>Sign up with Instagram</button>
             </div>
-            <p class="old-user">Already have an account? <a><span class="log">Log in</span> </a></p>
+            <p class="old-user">Already have an account? <a href="./login_page/login.html"><span class="log">Log in</span> </a></p>
         </div>
         <div class="testimonial">
             <img src="./asset/images/beauty Icon (2).png">
